fix(deps): Update dependencies and import maps
Updates react and react-dom to v19.2.3, and @google/genai to v1.34.0. Also adjusts import maps and service worker paths to use relative URLs for better PWA compatibility. The `process.env` shim is clarified to address Node.js environment expectations.

--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "name": "Aether Weather & Panchang",
   "short_name": "Aether",
   "description": "High-performance atmospheric and Vedic insights dashboard.",
-  "start_url": ".",
+  "start_url": "./",
   "display": "standalone",
   "display_override": ["standalone", "fullscreen"],
   "orientation": "portrait",
@@ -27,7 +27,7 @@
   "shortcuts": [
     {
       "name": "Daily Rashifal",
-      "url": "/?view=rashifal",
+      "url": "./?view=rashifal",
       "description": "View your daily Vedic horoscope",
       "icons": [{ "src": "https://lh3.googleusercontent.com/aida-public/AB6AXuAYuSUsiv3b3YXKjnKr-H_aaJd29W7yCKpIqfDTC7QkHU8_YtFqYOZDWLt-C6CsXlAJ6jn1357L-CuTCfvp-8dv4X0YxusF0je1YfEeQYrvJXzC-ucED_bzWL2M1BZP7UswxMQ3YejPCJ3x1wpvhDHWeEvE_3wakZRXkEYC2os8tlHaLnSAYxauiwp68isu3zZYwDAzpkZy_zPGAbhWUbJmKA7opy_QLm54g7o5Z3iuxylA12p6xfVxbEKJDF_DIr26LTv5IRScww", "sizes": "512x512" }]
     }
